2012-12-10  Tom Lane  <tgl@sss.pgh.pa.us>

	* tools/ppm2tiff.c: Back-patch fix for CVE-2012-4564.

2012-12-10  Tom Lane  <tgl@sss.pgh.pa.us>

	* libtiff/tif_pixarlog.c: Back-patch recent security fixes for
	tif_pixarlog.c, namely the fix for CVE-2012-4447 and protections
	against accessing outside the lookup arrays for out of range
	inputs.

2012-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* automake: Update Automake to 1.12.5 release.

2012-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtiff 3.9.7 released.

	* automake: Update to use GNU automake 1.12.4

2012-07-19  Tom Lane  <tgl@sss.pgh.pa.us>

	* tools/tiff2pdf.c: Fix two places where t2p_error didn't get set
	after a malloc failure.  No crash risk AFAICS, but the program
	might not report exit code 1 as desired.  h/t mancha@mac.hush.com

2012-07-18  Tom Lane  <tgl@sss.pgh.pa.us>

	* tools/tiff2pdf.c: Fail when TIFFSetDirectory() fails.  This
	prevents core dumps or perhaps even arbitrary code execution when
	processing a corrupt input file (CVE-2012-3401).

2012-06-15  Tom Lane  <tgl@sss.pgh.pa.us>

	* libtiff/tif_strip.c, libtiff/tif_tile.c: Back-patch the 4.0
	behavior of treating signed overflow as an error in TIFFVStripSize
	and TIFFVTileSize.  This is needed since the result is declared as
	tsize_t which is signed, and callers are likely to do the wrong
	thing entirely when the returned value is negative (CVE-2012-2088).

	* tools/tiff2pdf.c: Defend against integer overflows while
	calculating required buffer sizes (CVE-2012-2113).

2012-06-04  Frank Warmerdam  <warmerdam@google.com>

	* libtiff/tif_dirread.c: Avoid trusting samplesperpixel's default
	of 1 for purposes of trimming tags.  This is to get some super
	crappy OJPEG files to work again.  Grr. 
	http://bugzilla.maptools.org/show_bug.cgi?id=2348

2012-06-01  Frank Warmerdam  <warmerdam@google.com>

	* libtiff/tif_dir.c: Avoid generic handling of TIFFTAG_WHITELEVEL.
	http://bugzilla.maptools.org/show_bug.cgi?id=2321
